<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment"
    android:background="@drawable/bg_blue">

    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_login"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_chat"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@id/title_login"
        app:layout_constraintTop_toBottomOf="@id/title_login"
        app:layout_constraintEnd_toEndOf="@id/title_login"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias=".1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/text_email"
        app:layout_constraintEnd_toEndOf="@id/text_email"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        android:layout_marginHorizontal="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:hint="@string/text_hint_email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/text_email"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        android:layout_marginTop="80dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/text_password"
        app:layout_constraintTop_toBottomOf="@id/text_password"
        app:layout_constraintEnd_toEndOf="@id/text_password"
        android:layout_marginHorizontal="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/text_hint_password"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:textAllCaps="false"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>